# hint-playground

./: .gitignore  Foo.hs  README.adoc  hint-playground.cabal  hint-test.cabal  shell.nix
app/: Main.hs
src/: MyLib.hs
