cabal-version:       2.4

name:                hint-playground
version:             0.1.0.0
author:              Michael Hueschen
maintainer:          m@mhueschen.space
category:            Language

library
  exposed-modules:     MyLib
  build-depends:       base ^>=4.12.0.0
                     , hint
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hp
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
                     , hint-playground
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -O2
