cabal-version:       2.4

name:                hint-test
version:             0.1.0.0
author:              Michael Hueschen
maintainer:          m@mhueschen.space
category:            Language

library
  exposed-modules:     MyLib
  build-depends:       base ^>=4.12.0.0
                     , hint
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hint-test
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
                     , hint-test
  hs-source-dirs:      app
  default-language:    Haskell2010
